# lbry_comment_notifier_rust

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs  schema.rs
migrations/2020-04-12-013830_create_comments/: down.sql  up.sql
runner/: Cargo.toml
runner/src/: main.rs
