[package]
name = "core"
version = "0.1.0"
authors = ["Francis Murillo <francis.murillo@protonmail.com>"]
edition = "2018"

[dependencies]
futures = { version = "0.3.4" }
reqwest = { version = "0.10.4", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
