[package]
name = "core"
version = "0.1.0"
authors = ["Francis Murillo <francis.murillo@protonmail.com>"]
edition = "2018"

[dependencies]
log = { version = "0.4.8" }
futures = { version = "0.3.4", features = ["alloc"] }
reqwest = { version = "0.10.4", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "0.2.17", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
diesel = { version = "1.4.4", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "1.4.0" }
lettre_email = { version = "0.9.3" }
dotenv = { version = "0.14.0" }

[dev-dependencies]
rand = { version = "0.7.3" }
